--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.17",
     "@nestjs/platform-socket.io": "^11.1.1",
-    "@nestjs/swagger": "^7.1.12",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^11.1.1",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "class-validator": "^0.14.2",
+    "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.9.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -54,6 +57,7 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.8.3",
     "@types/nodemailer": "^6.4.11",
     "@types/passport-jwt": "^3.0.10",
